# py-fastapi

./: .coveragerc  .dockerignore  .env.sample  .flake8  .gitignore  .pylintrc  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Dockerfile.fastapi_example  app.py  database.py  db.sqlite  dev-requirements.txt  development.db  makefile  models.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
apps/ailab_apigateway/: README.md  makefile  pyproject.toml
apps/ailab_apigateway/_data/: mock_diary2.txt
apps/ailab_apigateway/ailab_apigateway/: app.py  config.py
apps/ailab_apigateway/ailab_apigateway/routers/: __init__.py  ask.py  health.py
apps/ailab_apigateway/ailab_apigateway/routers/dtos/: __init__.py  ask_dto.py
apps/ailab_apigateway/ailab_apigateway/utilities/: directory_utils.py  embedding_selector.py  format_responses.py  indexer.py  prompt_variables.py  retriever.py
apps/ailab_apigateway/ailab_apigateway/utilities/indexer_utils/: postgres_methods.py  settings.py
apps/ailab_apigateway/ailab_apigateway/utilities/retriever_utils/: settings.py  vectorstore_methods.py
apps/ailab_apigateway/config/: .secrets.toml  default.toml  environment.yml  settings.toml
apps/ailab_apigateway/databases/faiss.db/: index.faiss  index.pkl
apps/ailab_apigateway/example_scripts/: client.py  private_attrs.py  protected_attrs.py  serve.py
apps/ailab_apigateway/notebooks/: langchain_test_RAG.ipynb  langchain_test_prompting.ipynb
apps/ailab_apigateway/tests/: test_retriever.py
apps/ailab_apigateway/tests/test_docs/: short_doc.txt
apps/fastapi_example/: Dockerfile  makefile  pyproject.toml
apps/fastapi_example/config/: settings.toml
apps/fastapi_example/fastapi_example/: app.py  cli.py  config.py  security.py
apps/fastapi_example/fastapi_example/models/: content.py
apps/fastapi_example/fastapi_example/utils/: read_text_file.py
apps/fastapi_example/tests/: conftest.py
config/: default.toml
fastapi_example/: __init__.py  app.py  config.py  db.py  security.py
fastapi_example/models/: content.py
fastapi_example/routes/: content.py  user.py
py_fastapi/: app.py  database.py  models.py
scripts/: prepare.sh
src/: config.py  security.py
src/models/: content.py
tests/: conftest.py  test_user_api.py
todo_fastapi/: app.py  config.py  makefile  models.py
todo_fastapi/.devcontainer/: Dockerfile  devcontainer.json
todo_fastapi/config/: __init__.py  config.py
todo_fastapi/utils/: __init__.py  hello_world.py
