[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = "A starter project using fastapi"
authors = ["Niels P. Sorensen <sorensen.niels@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
python-multipart = "^0.0.6"
SQLAlchemy = "^2.0.23"
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.11.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
flake8-unused-arguments = "^0.0.13"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
